--- a/myapp/templates/domains.html
+++ b/myapp/templates/domains.html
@@ -2,12 +2,12 @@
 
 {% block content %}
     <div class="mb-6">
-        <h1 class="text-2xl font-bold">These domains will be directed to {{ upstream.domain }}</h1>
+        <h1 class="text-2xl font-bold">These domains will be directed to <a target="_blank" style="color:black; text-decoration:none;" href="http://{{ upstream.domain }}">{{ upstream.domain }}</a></h1>
         <p class="text-gray-600 mt-2">
             <span class="font-semibold">Make sure these domains have CNAME set to:</span> 
-            <span id="secret">{{ session['user'] }}.{{ host }}</span>
-            <button onclick="toggleSecret()" class="ml-2 text-blue-600 hover:text-blue-800">
-                <i class="fas fa-eye-slash"></i>
+            <input id="cname" value="{{ session['user'] }}.{{ host }}"/>
+            <button onclick="copyCname()" class="ml-2 text-blue-600 hover:text-blue-800">
+                <i class="fas fa-copy"></i>
             </button>
         </p>
     </div>
@@ -58,6 +58,13 @@
     </div>
 
     <script>
+    function copyCname(){
+      var copyText = document.querySelector("#cname");
+      try{ navigator.clipboard.writeText(copyText.value); } catch(e){
+      copyText.select();
+      document.execCommand("copy");}
+    }
+
     // Toggle Upstream Form
     function toggleUpstreamForm() {
         const form = document.getElementById('upstreamForm');
@@ -96,7 +103,7 @@ function loadDomains() {
             const row = document.createElement('tr');
 
             row.innerHTML = `
-                <td class="px-6 py-4 whitespace-nowrap">${domain}</td>
+                <td class="px-6 py-4 whitespace-nowrap">${domain}  <i style="cursor:pointer" onclick="window.open('http://${domain}')" class="fas fa-external-link"></i></td>
                 <td class="px-6 py-4 whitespace-nowrap">
                     <button onclick="deleteDomain('${domain}')" class="text-red-600 hover:text-red-800">
                         <i class="fas fa-trash"></i> Delete
